# Mazer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  maze.cpp  maze.h
src/: main.cpp
src/entity/: EntityManager.cpp  EntityManager.h  MazeEnemyEntity.cpp  MazeEnemyEntity.h  MazeEntity.cpp  MazeEntity.h  MazeGoalEntity.cpp  MazeGoalEntity.h  MazeNode.cpp  MazeNode.h  MazePlayerEntity.cpp  MazePlayerEntity.h
src/generator/: MazeGenerator.cpp  MazeGenerator.h
src/include/: MazeGenerator.h  MazeWall.h  types.h
src/maze/: Maze.cpp  Maze.h  MazeGenerator.cpp  MazeGenerator.h  MazeNode.cpp  MazeNode.h  Solver.cpp  Solver.h
