cmake_minimum_required(VERSION 2.9)
project(Mazer CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g")

find_package(SDL2 REQUIRED)
file(GLOB SOURCES "src/*.cpp" "src/**/*.cpp")
file(GLOB HEADERS "src/*.h" "src/**/*.h")
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
target_include_directories(${PROJECT_NAME} PRIVATE src/include src/maze)
target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})